compiler/testData/diagnostics/tests/enum/entries/genericEntriesPropertyClashPrioritized.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: +EnumEntries +PrioritizedEnumEntries
// WITH_STDLIB
// FIR_DUMP

package pckg

enum class A {
    ;

    companion object
}

val <T> T.entries: Int get() = 0

fun test() {
    val i: Int = <!INITIALIZER_TYPE_MISMATCH!>A.entries<!>
    A.Companion.entries
}
